[gd_scene load_steps=187 format=2]

[ext_resource path="res://MobCarnivore.gd" type="Script" id=1]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00000.png" type="Texture" id=2]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00001.png" type="Texture" id=3]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00002.png" type="Texture" id=4]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00003.png" type="Texture" id=5]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00004.png" type="Texture" id=6]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00005.png" type="Texture" id=7]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00006.png" type="Texture" id=8]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00007.png" type="Texture" id=9]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00008.png" type="Texture" id=10]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00009.png" type="Texture" id=11]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00010.png" type="Texture" id=12]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00011.png" type="Texture" id=13]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00012.png" type="Texture" id=14]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00013.png" type="Texture" id=15]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00014.png" type="Texture" id=16]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00015.png" type="Texture" id=17]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00016.png" type="Texture" id=18]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00017.png" type="Texture" id=19]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00018.png" type="Texture" id=20]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00019.png" type="Texture" id=21]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00020.png" type="Texture" id=22]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00021.png" type="Texture" id=23]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00022.png" type="Texture" id=24]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00023.png" type="Texture" id=25]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00024.png" type="Texture" id=26]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00025.png" type="Texture" id=27]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00026.png" type="Texture" id=28]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00027.png" type="Texture" id=29]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00028.png" type="Texture" id=30]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00029.png" type="Texture" id=31]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00030.png" type="Texture" id=32]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00031.png" type="Texture" id=33]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00032.png" type="Texture" id=34]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00033.png" type="Texture" id=35]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00034.png" type="Texture" id=36]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00035.png" type="Texture" id=37]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00036.png" type="Texture" id=38]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00037.png" type="Texture" id=39]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00038.png" type="Texture" id=40]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00039.png" type="Texture" id=41]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00040.png" type="Texture" id=42]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00041.png" type="Texture" id=43]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00042.png" type="Texture" id=44]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00043.png" type="Texture" id=45]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00044.png" type="Texture" id=46]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00045.png" type="Texture" id=47]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00046.png" type="Texture" id=48]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00047.png" type="Texture" id=49]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00048.png" type="Texture" id=50]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00049.png" type="Texture" id=51]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00050.png" type="Texture" id=52]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00051.png" type="Texture" id=53]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00052.png" type="Texture" id=54]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00053.png" type="Texture" id=55]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00054.png" type="Texture" id=56]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00055.png" type="Texture" id=57]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00056.png" type="Texture" id=58]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00057.png" type="Texture" id=59]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00058.png" type="Texture" id=60]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00059.png" type="Texture" id=61]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00060.png" type="Texture" id=62]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00061.png" type="Texture" id=63]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00062.png" type="Texture" id=64]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00063.png" type="Texture" id=65]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00064.png" type="Texture" id=66]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00065.png" type="Texture" id=67]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00066.png" type="Texture" id=68]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00067.png" type="Texture" id=69]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00068.png" type="Texture" id=70]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00069.png" type="Texture" id=71]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00070.png" type="Texture" id=72]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00071.png" type="Texture" id=73]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00072.png" type="Texture" id=74]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00073.png" type="Texture" id=75]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00074.png" type="Texture" id=76]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00075.png" type="Texture" id=77]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00076.png" type="Texture" id=78]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00077.png" type="Texture" id=79]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00078.png" type="Texture" id=80]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00079.png" type="Texture" id=81]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00080.png" type="Texture" id=82]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00081.png" type="Texture" id=83]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00082.png" type="Texture" id=84]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00083.png" type="Texture" id=85]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00084.png" type="Texture" id=86]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00085.png" type="Texture" id=87]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00086.png" type="Texture" id=88]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00087.png" type="Texture" id=89]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00088.png" type="Texture" id=90]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00089.png" type="Texture" id=91]
[ext_resource path="res://newart/Animal_Eating/Animal_EruminatiumEat_00090.png" type="Texture" id=92]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00000.png" type="Texture" id=93]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00001.png" type="Texture" id=94]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00002.png" type="Texture" id=95]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00003.png" type="Texture" id=96]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00004.png" type="Texture" id=97]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00005.png" type="Texture" id=98]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00006.png" type="Texture" id=99]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00007.png" type="Texture" id=100]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00008.png" type="Texture" id=101]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00009.png" type="Texture" id=102]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00010.png" type="Texture" id=103]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00011.png" type="Texture" id=104]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00012.png" type="Texture" id=105]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00013.png" type="Texture" id=106]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00014.png" type="Texture" id=107]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00015.png" type="Texture" id=108]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00016.png" type="Texture" id=109]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00017.png" type="Texture" id=110]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00018.png" type="Texture" id=111]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00019.png" type="Texture" id=112]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00020.png" type="Texture" id=113]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00021.png" type="Texture" id=114]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00022.png" type="Texture" id=115]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00023.png" type="Texture" id=116]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00024.png" type="Texture" id=117]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00025.png" type="Texture" id=118]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00026.png" type="Texture" id=119]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00027.png" type="Texture" id=120]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00028.png" type="Texture" id=121]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00029.png" type="Texture" id=122]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00030.png" type="Texture" id=123]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00031.png" type="Texture" id=124]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00032.png" type="Texture" id=125]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00033.png" type="Texture" id=126]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00034.png" type="Texture" id=127]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00035.png" type="Texture" id=128]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00036.png" type="Texture" id=129]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00037.png" type="Texture" id=130]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00038.png" type="Texture" id=131]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00039.png" type="Texture" id=132]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00040.png" type="Texture" id=133]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00041.png" type="Texture" id=134]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00042.png" type="Texture" id=135]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00043.png" type="Texture" id=136]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00044.png" type="Texture" id=137]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00045.png" type="Texture" id=138]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00046.png" type="Texture" id=139]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00047.png" type="Texture" id=140]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00048.png" type="Texture" id=141]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00049.png" type="Texture" id=142]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00050.png" type="Texture" id=143]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00051.png" type="Texture" id=144]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00052.png" type="Texture" id=145]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00053.png" type="Texture" id=146]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00054.png" type="Texture" id=147]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00055.png" type="Texture" id=148]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00056.png" type="Texture" id=149]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00057.png" type="Texture" id=150]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00058.png" type="Texture" id=151]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00059.png" type="Texture" id=152]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00060.png" type="Texture" id=153]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00061.png" type="Texture" id=154]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00062.png" type="Texture" id=155]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00063.png" type="Texture" id=156]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00064.png" type="Texture" id=157]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00065.png" type="Texture" id=158]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00066.png" type="Texture" id=159]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00067.png" type="Texture" id=160]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00068.png" type="Texture" id=161]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00069.png" type="Texture" id=162]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00070.png" type="Texture" id=163]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00071.png" type="Texture" id=164]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00072.png" type="Texture" id=165]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00073.png" type="Texture" id=166]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00074.png" type="Texture" id=167]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00075.png" type="Texture" id=168]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00076.png" type="Texture" id=169]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00077.png" type="Texture" id=170]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00078.png" type="Texture" id=171]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00079.png" type="Texture" id=172]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00080.png" type="Texture" id=173]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00081.png" type="Texture" id=174]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00082.png" type="Texture" id=175]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00083.png" type="Texture" id=176]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00084.png" type="Texture" id=177]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00085.png" type="Texture" id=178]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00086.png" type="Texture" id=179]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00087.png" type="Texture" id=180]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00088.png" type="Texture" id=181]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00089.png" type="Texture" id=182]
[ext_resource path="res://newart/Animal_Walking/Animal_Eruminatium_00090.png" type="Texture" id=183]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 81 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 84 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 88 ), ExtResource( 89 ), ExtResource( 90 ), ExtResource( 91 ), ExtResource( 92 ) ],
"loop": false,
"name": "eat",
"speed": 30.0
}, {
"frames": [ ExtResource( 93 ), ExtResource( 94 ), ExtResource( 95 ), ExtResource( 96 ), ExtResource( 97 ), ExtResource( 98 ), ExtResource( 99 ), ExtResource( 100 ), ExtResource( 101 ), ExtResource( 102 ), ExtResource( 103 ), ExtResource( 104 ), ExtResource( 105 ), ExtResource( 106 ), ExtResource( 107 ), ExtResource( 108 ), ExtResource( 109 ), ExtResource( 110 ), ExtResource( 111 ), ExtResource( 112 ), ExtResource( 113 ), ExtResource( 114 ), ExtResource( 115 ), ExtResource( 116 ), ExtResource( 117 ), ExtResource( 118 ), ExtResource( 119 ), ExtResource( 120 ), ExtResource( 121 ), ExtResource( 122 ), ExtResource( 123 ), ExtResource( 124 ), ExtResource( 125 ), ExtResource( 126 ), ExtResource( 127 ), ExtResource( 128 ), ExtResource( 129 ), ExtResource( 130 ), ExtResource( 131 ), ExtResource( 132 ), ExtResource( 133 ), ExtResource( 134 ), ExtResource( 135 ), ExtResource( 136 ), ExtResource( 137 ), ExtResource( 138 ), ExtResource( 139 ), ExtResource( 140 ), ExtResource( 141 ), ExtResource( 142 ), ExtResource( 143 ), ExtResource( 144 ), ExtResource( 145 ), ExtResource( 146 ), ExtResource( 147 ), ExtResource( 148 ), ExtResource( 149 ), ExtResource( 150 ), ExtResource( 151 ), ExtResource( 152 ), ExtResource( 153 ), ExtResource( 154 ), ExtResource( 155 ), ExtResource( 156 ), ExtResource( 157 ), ExtResource( 158 ), ExtResource( 159 ), ExtResource( 160 ), ExtResource( 161 ), ExtResource( 162 ), ExtResource( 163 ), ExtResource( 164 ), ExtResource( 165 ), ExtResource( 166 ), ExtResource( 167 ), ExtResource( 168 ), ExtResource( 169 ), ExtResource( 170 ), ExtResource( 171 ), ExtResource( 172 ), ExtResource( 173 ), ExtResource( 174 ), ExtResource( 175 ), ExtResource( 176 ), ExtResource( 177 ), ExtResource( 178 ), ExtResource( 179 ), ExtResource( 180 ), ExtResource( 181 ), ExtResource( 182 ), ExtResource( 183 ) ],
"loop": true,
"name": "walk",
"speed": 30.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 38.0
height = 12.0

[sub_resource type="CircleShape2D" id=3]
radius = 256.944

[node name="MobCarnivore" type="Area2D" groups=[
"Carnivore",
]]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 1 )
animation = "walk"
frame = 69
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -8, -3 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="Area2D" type="Area2D" parent="."]
visible = false
gravity = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )
[connection signal="area_shape_entered" from="." to="." method="_on_MobCarnivore_area_shape_entered"]
[connection signal="body_entered" from="." to="." method="_on_MobCarnivore_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_MobCarnivore_body_shape_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_Area2D_area_shape_entered"]
